--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
   <div>
      Hello there!
     </div>
+
+    <div><a href="drugi.html">And I'm link on other page</a></div>
   <script src="app.js"></script>
 </body>
 </html>
