--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
      Hello there!
     </div>
 
-    <div><a href="drugi.html">Hi. You can learn more about me here. Take a look :)</a></div>
+    <div><a href="drugi.html">You can learn more about me here. Take a look :)</a></div>
   <script src="app.js"></script>
 </body>
 </html>
