--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <div><a href="drugi.html">You can learn more about me here. Take a look :)</a></div>
 
-    <div><a href="treci.html">If you want to know where I live, click here</a></div>
+    <div><a href="treci.html">If you want to know where I live, click here.</a></div>
 
   <script src="app.js"></script>
 </body>
