Edit first line

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
   <div>
-     Hello there!
+     **Hello there!**
     </div>
 
     <div><a href="drugi.html">You can learn more about me here. Take a look :)</a></div>
