--- a/drugi.html
+++ b/drugi.html
@@ -18,7 +18,7 @@
 
 <body>
   <div>
-     My name is Ivana. Hi.
+     My name is Ivana. Hi. Hi.
     </div>
   <script src="app.js"></script>
 </body>
